chore: fixed pipeline

--- a/.github/workflows/deploy-doc.yaml
+++ b/.github/workflows/deploy-doc.yaml
@@ -9,7 +9,7 @@ on:
       - docs
 
 jobs:
-  deploy:
+  build:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     steps:
@@ -24,8 +24,9 @@ jobs:
       - name: Build website
         run: yarn build:docs
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/build
+  deploy:
+    name: Deploy to GitHub Pages
+    uses: peaceiris/actions-gh-pages@v3
+    with:
+      github_token: ${{ secrets.GITHUB_TOKEN }}
+      publish_dir: ./docs/build
