chore: maybe fixed

--- a/.github/workflows/deploy-doc.yaml
+++ b/.github/workflows/deploy-doc.yaml
@@ -40,4 +40,4 @@ jobs:
           publish_dir: ./docs/build
 
       - name: Deploy
-        run: GIT_USER=virakkhun yarn deploy
+        run: GIT_USER=virakkhun yarn deploy:doc
