--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - 'release-react-hooks'
+  push:
+    branches:
+      - 'release-react-hooks'
 
 jobs:
   release:
