--- a/.github/workflows/deploy-doc.yaml
+++ b/.github/workflows/deploy-doc.yaml
@@ -38,6 +38,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs/build
+          publish_branch: deployment
 
       - name: Deploy Doc
         run: GIT_USER=${{ secrets.USERNAME }} yarn deploy:doc
