--- a/.github/workflows/deploy-doc.yaml
+++ b/.github/workflows/deploy-doc.yaml
@@ -7,13 +7,17 @@ on:
   pull_request:
     branches:
       - docs
+  workflow_dispatch:
 
 jobs:
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: read, write
+      pages: write
+      id-token: write
+
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
 
@@ -39,9 +43,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs/build
           publish_branch: deployment
-
-      - name: Deploy Doc
-        run: GIT_USER=${{ secrets.USERNAME }} yarn deploy:doc
-        env:
-          GIT_USER: ${{ secrets.USERNAME }}
-          GIT_PASS: ${{ secrets.PAT }}
