--- a/.github/workflows/deploy-doc.yaml
+++ b/.github/workflows/deploy-doc.yaml
@@ -35,7 +35,7 @@ jobs:
         run: yarn install
 
       - name: Build website
-        run: yarn build:docs
+        run: yarn build:doc
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
